test/pass/forward2.min
program
    function forward number sum number x; number y done;
    function number sum number x; number y do
        return x + y
start
end
