test/fail/failtypes.min
program
    function forward void hello number x; number y done
start
    hello(2, "hello");
end
